# tracer-test-pipelines-bioinformatics

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README2.md  custom.config  dependencies_installation.sh  nextflow_installer.sh  pixi.toml  pyproject.toml  spack.yaml
.devcontainer/: Dockerfile  Dockerfile.SimpleSetup  devcontainer.json  setup.sh
.github/: README.md
.github/workflows/: codespaces-pixi.yml  codespaces.yml  docker-build-push.yml  linux-aarch64-amazon-lin.yml  linux-aarch64-ubuntu.yml  linux-aarch64.yml  linux-x86-amazon-lin.yml  linux-x86_64-ubuntu.yml  mac-arm64.yml  macos-arm64-pixi.yml  macos-arm64.yml  macos-intel-x86.yml  oom-test.yml
cloudformation/: README.md  batch-optimization-test-queues.yml  cost-usage-report.yml  nextflow-batch-resources.yml  nextflow-batch.yml
conda-flows/: main.nf  nextflow-config.yml  transcriptome.fa
conda-flows/envs/: salmon-env.yml
examples/macos-arm64-conda-minimal/: environment.yml  setup.sh
frameworks/: README.md  test-all-frameworks.sh
frameworks/airflow/: Dockerfile  README.md  docker-compose.yaml
frameworks/aws-batch/: Makefile  README.md
frameworks/batch/: README.md
frameworks/cwl/: .gitignore  Makefile  README.md  counts.txt  counts.txt.summary  generate.sh  rnaseq-job-001.yml  test.fastq  test_fastqc.html
frameworks/nextflow/: Makefile  README.md
frameworks/nextflow-mini/: README.md
frameworks/oom-tests/: Makefile  README.md  wrapper.c
frameworks/wdl/: .gitignore  README.md  fastq_subsample.inputs.json
integrations-setup/: README.md
integrations-setup/airflow/: README.md
integrations-setup/aws-batch/: Makefile  README.md
integrations/airflow/: .gitignore
integrations/aws-batch/: Makefile
integrations/cwl/: README.md
integrations/oom-tests/: Makefile  README.md
integrations/wdl/: README.md
nextflow-config/: batch.config  local.config  proteinfold-params.json  proteinfold.config  rnaseq.config  sarek.config
pipelines/: README.md  spack.yaml
pipelines/shared/cwl/: .gitignore  pyproject.toml  rnaseq-job-001.yml
(+276 files in other folders)
