[project]
name = "tracer-cwl"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Birnberg",email = "andrew.birnberg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "toil[aws,cwl] (>=7.0.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

