[project]
name = "tracer-cwl"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Birnberg",email = "andrew.birnberg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "toil[aws,cwl] (>=7.0.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

# Security constraints to fix vulnerable packages
[tool.poetry.dependencies]
# Fix setuptools path traversal vulnerability (CVE-2024-27351)
setuptools = ">=76.0.0"

# Fix urllib3 redirect vulnerabilities (CVE-2024-35691, CVE-2024-35692)
urllib3 = ">=2.4.0"

# Fix requests vulnerabilities (CVE-2024-35166, CVE-2024-35167)
requests = ">=2.32.0"

# Fix Jinja2 sandbox breakout vulnerability (CVE-2024-22195)
jinja2 = ">=3.1.6"

# Fix cryptography OpenSSL vulnerability (CVE-2024-2511)
cryptography = ">=45.0.0"

